<resources>
    <string name="app_name">BMI CALCULATOR</string>
    <string name="your_name">Your Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="height">Height in cm</string>
    <string name="weight">Weight in kgs</string>
    <string name="calculate">Calculate</string>
    <string name="title_activity_result">Result</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bmi_result">Your BMI Result</string>
    <string name="back">Go Back</string>
</resources>