<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:background="#EAF8F6"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivBmi"
        android:layout_width="match_parent"
        android:layout_height="138dp"
        app:srcCompat="@drawable/bmi_icon" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/etGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/gender"
        android:inputType="textPersonName"
        android:background="@drawable/custom_edit_text"
        android:layout_margin="15dp"
        android:paddingLeft="10dp"/>


    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:layout_margin="15dp"
        android:background="@drawable/custom_edit_text"
        android:paddingLeft="10dp"
        />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        android:layout_margin="15dp"
        android:background="@drawable/custom_edit_text"
        android:paddingLeft="10dp"
        />

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:paddingLeft="10dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:text="@string/calculate" />

</LinearLayout>